--- a/design.css
+++ b/design.css
@@ -228,12 +228,15 @@ button {
 @media (max-width: 459px) {
   input {
     width: 97%;
+    margin-left: 1.5%;
   }
   label {
     text-align: center;
     font-size: 20px;
     display: none
     }
+  button {
+    margin-right: 1.5%;}
   }
 
 @media (max-width: 800px) {
