--- a/design.css
+++ b/design.css
@@ -37,11 +37,20 @@ body {
     background-position: top;
     background-repeat: no-repeat;
     background-color: aliceblue;
-    
-    
 }
 
-footer {
+footer.main {
+  background-color: rgba(111, 34, 50);
+  color: black;
+  width: 100%;
+  bottom: 0;
+  left: 0;
+  padding: 30px;
+  box-sizing: border-box;
+  position: fixed;
+}
+
+footer.abt {
   background-color: rgba(111, 34, 50);
   color: black;
   width: 100%;
@@ -181,6 +190,18 @@ button {
     align-items: center;
 }
 
+div.abt {
+    font-family: system-ui;
+    font-size: 20px;
+    color: white;
+    margin: 20px;
+    padding: 20px;
+    background-color: rgba(111, 34, 50);
+    border: 2px solid;
+    border-radius: 10px;
+
+}
+
 @media (max-width: 1050px) {  /*Complete*/
   header {
     img.logo {
@@ -225,6 +246,12 @@ button {
   }
 }
 
+@media (max-width: 493px) {
+  div.abt {
+    font-size: 14px;
+  }
+}
+
 @media (max-width: 459px) {
   input {
     width: 97%;
@@ -247,8 +274,20 @@ button {
     background-image: url("images/fr.png");
     background-attachment: local;
   }
-  footer {
+  body.abt {
+    min-height: 100vh;
+    display: flex;
+    flex-direction: column;
+    background-image: url("images/fr.png");
+    background-attachment: local;
+  }
+  footer.main {
     height: 300px;
+    position: static;
+    margin-top: auto;
+  }
+  footer.abt {
+    height: 100px;
     position: static;
     margin-top: auto;
   }
