--- a/design.css
+++ b/design.css
@@ -87,7 +87,7 @@ h1.title {
 }
 
 input {
-    border: 2px gray solid; 
+    border: 2px rgba(111, 34, 50) solid; 
     border-radius: 10px;
     height: 30px;
     padding: 2px;
@@ -133,8 +133,9 @@ a:link {
 button {
     font-family: system-ui;
     font-size: 24px;
+    border: 2px solid rgba(111, 34, 50);
     border-radius: 12px;
-    background-color: rgb(184, 183, 183);
+    background-color: rgb(255, 255, 255);
     cursor: pointer;
     flex-shrink: 0;
     height: 40px;
